rgw: Do not decrement stats cache when the cache values are zero

With RGWs configured in a load balancer, there is a possibility of
having the cached values going unbound, when PUT/DELETE operations
do not land up on the same RGW. To avoid such cases, make sure the
decrement of stats happen only when the cached values are sane.

Fixes: http://tracker.ceph.com/issues/20661
Signed-off-by: Pavan Rallabhandi <PRallabhandi@walmartlabs.com>
(cherry picked from commit 3903e213c7ac7624e3452f5f3b1ca1c339bf2ca2)

Conflicts:
	src/rgw/rgw_quota.cc